--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
       http-equiv="Cache-Control"
       content="no-cache, no-store, must-revalidate"
-    />
+      />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,7 @@
       type="image/x-icon"
     />
     <!-- CSS styles -->
-    <link rel="stylesheet" href="../abid__css/abid__mainCss.css" />
+    <link rel="stylesheet" href="./abid__css/abid__mainCss.css" />
     <link rel="stylesheet" href="../abid__css/abid__pageLoader.css" />
     <link rel="stylesheet" href="../abid__css/abid__terms.css" />
 
