--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     />
     <!-- CSS styles -->
     <link rel="stylesheet" href="abid__css/abid__mainCss.css" />
-    <link rel="stylesheet" href="../abid__css/abid__pageLoader.css" />
-    <link rel="stylesheet" href="../abid__css/abid__terms.css" />
+    <link rel="stylesheet" href="abid__css/abid__pageLoader.css" />
+    <link rel="stylesheet" href="abid__css/abid__terms.css" />
 
     <!-- Browser addressb-bar COLOR -->
     <!-- Chrome, Firefox OS and Opera -->
@@ -189,7 +189,7 @@
     </div>
 
     <!-- Make the loader wait untill the page fully loaded. -->
-    <script src="../abid__js/abid__loadingWait.js"></script>
-    <script src="../abid__js/abid__terms.js"></script>
+    <script src="abid__js/abid__loadingWait.js"></script>
+    <script src="abid__js/abid__terms.js"></script>
   </body>
 </html>
