--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       type="image/x-icon"
     />
     <!-- CSS styles -->
-    <link rel="stylesheet" href="abid__css/abid__mainCss.css" />
-    <link rel="stylesheet" href="abid__css/abid__pageLoader.css" />
-    <link rel="stylesheet" href="abid__css/abid__terms.css" />
+    <link rel="stylesheet" href="abid__css/abid__mainCss.css">
+    <link rel="stylesheet" href="abid__css/abid__pageLoader.css">
+    <link rel="stylesheet" href="abid__css/abid__terms.css">
 
     <!-- Browser addressb-bar COLOR -->
     <!-- Chrome, Firefox OS and Opera -->
