--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link
       rel="shortcut icon"
-      href="abid__imgS/abid-fav.jpg"
+      href="/abid__imgS/abid-fav.jpg"
       type="image/x-icon"
     />
     <!-- CSS styles -->
