--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <!-- Make the loader wait untill the page fully loaded. -->
-    <script src="/abid__js/abid__loadingWait.js"></script>
-    <script src="/abid__js/abid__terms.js"></script>
+    <script src="abid__js/abid__loadingWait.js"></script>
+    <script src="abid__js/abid__terms.js"></script>
   </body>
 </html>
